--- a/index.qmd
+++ b/index.qmd
@@ -3,6 +3,8 @@ title: "About the Lecture"
 author: "Thomas M. Rudolf"
 format: html
 editor: visual
+numbered: false
+toc: false
 ---
 
 ## General Information about the lecture
@@ -43,19 +45,19 @@ editor: visual
 
 ## Evaluation
 
-+----------------------------------------------------------+------------+
-| Type                                                     | percentage |
-+==========================================================+============+
-| 2 Parcials:                                              | 25 % each  |
-|                                                          |            |
-| -   1st partial: 30/09/2024 or 02/10/2024 (1 hr, 20 min) |            |
-|                                                          |            |
-| -   2nd partial: 04/11/2024 or 06/11/2024 (1 hr, 20 min) |            |
-+----------------------------------------------------------+------------+
-| Final Project (Exam final: tbd (LMINT))                  | 30%        |
-+----------------------------------------------------------+------------+
-| Laboratory                                               | 20%        |
-+----------------------------------------------------------+------------+
++----------------------------------------------------------+--------------+
+| Type                                                     | percentage   |
++==========================================================+==============+
+| 2 Parcials:                                              | 25 % each    |
+|                                                          |              |
+| -   1st partial: 30/09/2024 or 02/10/2024 (1 hr, 20 min) |              |
+|                                                          |              |
+| -   2nd partial: 04/11/2024 or 06/11/2024 (1 hr, 20 min) |              |
++----------------------------------------------------------+--------------+
+| Final Project (Exam final: tbd (LMINT))                  | 30%          |
++----------------------------------------------------------+--------------+
+| Laboratory                                               | 20%          |
++----------------------------------------------------------+--------------+
 
 ## Course rules
 
