--- a/index.qmd
+++ b/index.qmd
@@ -7,9 +7,9 @@ numbered: false
 toc: false
 ---
 
-## General Information about the lecture
+# General Information about the lecture
 
-### Schedules
+## Schedules
 
 -   Theory: Mon / Wed, 12:30-14:00 hrs
 
@@ -19,54 +19,54 @@ toc: false
 
     -   G002 Fri 16:00-19:00 hrs
 
-### Lecturers
+## Lecturers
 
 -   Prof. Thomas M. Rudolf (theory)
 -   Prof. Claudia Victoria Olivar Jiménez (laboratory)
 
-### Location
+## Location
 
 -   Aula LMINT
 
-## Description and Objetives
+# Description and Objetives
 
 -   Address concepts related to Industrial Automation systems.
 -   Control methods applied mainly to sequential processes and the theory related to Grafcet will also be studied.
 -   Application of emerging technologies to automate industrial processes. The structure and programming logic for Programmable Logic Controllers (PLC) will be studied.
 
-## What is covered in this lecture:
+# What is covered in this lecture:
 
-![](figures/fig00-001.png)
+![](images/fig00-001.png)
 
-## What is not covered in this lecture:
+# What is not covered in this lecture:
 
 -   It is not a lectur about pneumatics nor hydraulics.
 -   It is not a fluid dynamics lecture.
 
-## Evaluation
+# Evaluation
 
-+----------------------------------------------------------+--------------+
-| Type                                                     | percentage   |
-+==========================================================+==============+
-| 2 Parcials:                                              | 25 % each    |
-|                                                          |              |
-| -   1st partial: 30/09/2024 or 02/10/2024 (1 hr, 20 min) |              |
-|                                                          |              |
-| -   2nd partial: 04/11/2024 or 06/11/2024 (1 hr, 20 min) |              |
-+----------------------------------------------------------+--------------+
-| Final Project (Exam final: tbd (LMINT))                  | 30%          |
-+----------------------------------------------------------+--------------+
-| Laboratory                                               | 20%          |
-+----------------------------------------------------------+--------------+
++----------------------------------------------------------+---------------+
+| Type                                                     | percentage    |
++==========================================================+===============+
+| 2 Parcials:                                              | 25 % each     |
+|                                                          |               |
+| -   1st partial: 30/09/2024 or 02/10/2024 (1 hr, 20 min) |               |
+|                                                          |               |
+| -   2nd partial: 04/11/2024 or 06/11/2024 (1 hr, 20 min) |               |
++----------------------------------------------------------+---------------+
+| Final Project (Exam final: tbd (LMINT))                  | 30%           |
++----------------------------------------------------------+---------------+
+| Laboratory                                               | 20%           |
++----------------------------------------------------------+---------------+
 
-## Course rules
+# Course rules
 
 -   Maximum 10 minutes delay.
 -   **NO** re-examinations.
 -   Sanction for plagiarism according to the regulations
 -   Food is not allowed in the lab
 
-## Topics
+# Topics
 
 -   Introduction to automation
 
