trying to change numbering in abouy

--- a/about.qmd
+++ b/about.qmd
@@ -3,6 +3,9 @@ title: "Thomas M. Rudolf"
 author: "Thomas M. Rudolf"
 format: html
 editor: visual
+numbered: false
+number-sections: false
+toc: false
 ---
 
 # Biography
