added numbered:: false in quarto.yml, index and chapter00

--- a/chapter00.qmd
+++ b/chapter00.qmd
@@ -1,10 +1,11 @@
 ---
-title: "Automation and Process Control" #Automation and Industrial Robots" Automation and Process Control
+title: "Preface" #Automation and Industrial Robots" Automation and Process Control
 output: 
   html_document:
     toc: true
 author: Thomas M. Rudolf
 editor: visual
+numbered: false
 email_address: thomas.rudolf@itam.mx
 toc: false
 toc-title: "Index 2024-3"
